Modified changeTodo to support objects

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <!-- <script src="version01.js"></script> -->
     <!-- <script src="version02.js"></script> -->
-    <script src="version03.js"></script>
+    <!-- <script src="version03.js"></script> -->
+    <script src="version04.js"></script>
   </body>
 </html>
