--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <script src="version01.js"></script> -->
     <!-- <script src="version02.js"></script> -->
     <!-- <script src="version03.js"></script> -->
-    <script src="version04.js"></script>
+    <!-- <script src="version04.js"></script> -->
+    <script src="version05.js"></script>
   </body>
 </html>
